--- a/manifest.yml
+++ b/manifest.yml
@@ -3,4 +3,4 @@ applications:
 - name: springboot-first
   memory: 512M
   host: springboot-first
-  path: target/demo-0.0.1-SHAPSHOT.jar
+  path: target/demo-0.0.1-SNAPSHOT.jar
