--- a/manifest.yml
+++ b/manifest.yml
@@ -4,3 +4,4 @@ applications:
   memory: 512M
   host: springboot-first
   path: target/demo-0.0.1-SNAPSHOT.jar
+  buildpack: java_buildpack_offline-v39
